hphp/test/zend/good/ext/sqlite3/tests/sqlite3_lasterrorcode_with_params.php
<?php

$db = new SQLite3(':memory:');
var_dump($db->lastErrorCode('invalid argument'));
echo "Done\n";
?>